<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

   <RelativeLayout
       android:layout_height="match_parent"
       android:layout_width="match_parent"
       android:orientation="vertical">

       <TextView
           android:drawableTop="@drawable/ic_directions_bike_black_24dp"
           android:id="@+id/pleaseText"
           android:gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="30dp"
           android:layout_marginVertical="50dp"
           android:hint="@string/please_enter_a_desired_email_and_password_to_register_or_proceed_to_sign_in"/>
    <EditText
        android:layout_below="@+id/pleaseText"
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"/>


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/loginPassword"
        android:layout_below="@+id/editTextEmail"
        android:layout_margin="10dp"/>

       <Button
           android:id="@+id/registerButton"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/register"
           android:layout_below="@+id/editTextPassword"
           android:layout_centerHorizontal="true" />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Already registered? Click here to log in"
           android:layout_below="@id/registerButton"
           android:textAlignment="center"
           android:layout_margin="20dp"
           android:id="@+id/textViewSignIn"/>

   </RelativeLayout>


</android.support.constraint.ConstraintLayout>