<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_screen3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:id="@+id/textViewTellUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_more_about_yourself"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/iLiveIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_live_in"
        android:textSize="15dp"
        android:layout_below="@+id/textViewTellUs"/>
    <EditText
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseCity"
        android:layout_below="@+id/iLiveIn"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/iAmFamiliar"
            android:layout_below="@+id/chooseCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_familiar_with_spots_in"/>
        <EditText
            android:id="@+id/editTextFamiliar"
            android:layout_below="@+id/iAmFamiliar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"/>
        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/done"
            android:layout_margin="20dp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>