<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pleaseTextLogIn"
            android:text="@string/please_enter_your_email_and_password_to_log_in"
            android:gravity="center"
            android:drawableTop="@drawable/ic_directions_bike_black_24dp"
            android:layout_marginVertical="50dp"
            android:layout_marginHorizontal="70dp"/>
        <EditText
            android:layout_below="@+id/pleaseTextLogIn"
            android:id="@+id/editTextEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"/>


        <EditText
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/loginPassword"
            android:layout_below="@+id/editTextEmailLogIn"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/logInButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/log_in"
            android:layout_below="@+id/editTextPasswordLogIn"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Click here to register"
            android:layout_below="@id/logInButton"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:id="@+id/textViewSignIn"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>